Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -17,7 +17,7 @@
   "favicon": "/img/uploads/logo-site.jpeg",
   "icons_font": "font-awesome",
   "country_code": "BR",
-  "secondary_color": "#ffc0cb",
+  "secondary_color": "#f6efef",
   "icon": "/img/uploads/logo-site.jpeg",
   "store_id": 29063,
   "description": "HF",
