--- a/content/settings.json
+++ b/content/settings.json
@@ -4,7 +4,7 @@
   "primary_color": "#ffc0cb",
   "theme": {
     "bootswatch": "litera",
-    "custom": "clean-gray"
+    "custom": "_"
   },
   "bg_color": "#ffc0cb",
   "logo": "/img/uploads/logo-site.jpeg",
@@ -17,7 +17,7 @@
   "favicon": "/img/uploads/logo-site.jpeg",
   "icons_font": "font-awesome",
   "country_code": "BR",
-  "secondary_color": "#f6efef",
+  "secondary_color": "#ffc0cb",
   "icon": "/img/uploads/logo-site.jpeg",
   "store_id": 29063,
   "description": "HF",
