--- a/content/settings.json
+++ b/content/settings.json
@@ -3,7 +3,7 @@
   "currency_symbol": "R$",
   "primary_color": "#ffc0cb",
   "theme": {
-    "bootswatch": "_",
+    "bootswatch": "lux",
     "custom": "_"
   },
   "bg_color": "#ffc0cb",
