--- a/content/settings.json
+++ b/content/settings.json
@@ -8,7 +8,7 @@
   },
   "bg_color": "#ffc0cb",
   "logo": "/img/uploads/logo-site.jpeg",
-  "name": "hfinholdt",
+  "name": "H F",
   "short_name": "HF",
   "lang": "pt_br",
   "currency": "BRL",
